design: ensure center alignment of views

--- a/Main/styles/index_page/_post-board.scss
+++ b/Main/styles/index_page/_post-board.scss
@@ -225,9 +225,15 @@
                 line-height: 16px;
                 letter-spacing: 0.025em;
 
-                .icon {
-                    margin-right: 4px;
-                    width: 14px;
+                .views {
+                    display: flex;
+                    flex-direction: row;
+                    align-items: center;
+                    gap: 4px;
+                    
+                    .icon {
+                        width: 14px;
+                    }
                 }
             }
         }
